@@ -13,7 +13,8 @@ be free standing, using \class{SimpleXMLRPCServer}, or embedded in a
 CGI environment, using \class{CGIXMLRPCRequestHandler}.
 
 \begin{classdesc}{SimpleXMLRPCServer}{addr\optional{,
-                                      requestHandler\optional{, logRequests}}}
+                                      requestHandler\optional{,
+					logRequests\optional{allow_none}}}}
 
   Create a new server instance.  The \var{requestHandler} parameter
   should be a factory for request handler instances; it defaults to
@@ -24,11 +25,13 @@ CGI environment, using \class{CGIXMLRPCRequestHandler}.
   setting this parameter to false will turn off logging.  This class
   provides methods for registration of functions that can be called by
   the XML-RPC protocol.
+  \versionchanged[The \var{allow_none} parameter was added]{2.5}
 \end{classdesc}
 
-\begin{classdesc}{CGIXMLRPCRequestHandler}{}
+\begin{classdesc}{CGIXMLRPCRequestHandler}{\optional{allow_none}}
   Create a new instance to handle XML-RPC requests in a CGI
   environment. \versionadded{2.3}
+  \versionchanged[The \var{allow_none} parameter was added]{2.5}
 \end{classdesc}
 
 \begin{classdesc}{SimpleXMLRPCRequestHandler}{}
